
* (Apr 14 2009) Daniel Stenberg:

  libssh2_poll() and libssh2_poll_channel_read() are now considered and
  documented deprecated and they will be removed at next soname bump. It also
  saves us from fixing some rather quirky bugs in libssh2_poll()...


Version 1.1 (April 2, 2009)
---------------------------

- (Mar 28 2009) Daniel Stenberg:

  Jean-Louis Charton found a memory leak in
  libssh2_userauth_hostbased_fromfile_ex()

- (Mar 25 2009) Daniel Stenberg:

   * Renamed the functions in src/transport.c to be _libssh2_transport_ prefixed
     and introduced a transport.h header.

   * Fixed the blocking mode to only change behavior not the actual underlying
     socket mode so we now always work with non-blocking sockets. This also
     introduces a new rule of thumb in libssh2 code: we don't call the
     external function calls internally. We use the internal (non-blocking)
     ones!

   * libssh2_channel_receive_window_adjust2 was added and
     libssh2_channel_receive_window_adjust is now deprecated

   * Introduced "local" header files with prototypes etc for different parts
     instead of cramming everything into libssh2_priv.h. channel.h is the
     first.

- (Mar 19 2009) Daniel Stenberg: based on a patch by "E L" we now use errno
  properly after recv() and send() calls (that internally are now known as
  _libssh2_recv() and _libssh2_send()) so that the API and more works fine on
  windows too!

- (Mar 17 2009) Simon Josefsson:

  Added a Libtool -export-symbols-regex flag to reduce the number of
  exported symbols in shared libraries.  Reported by Mikhail Gusarov.

- (Mar 16 2009) Daniel Stenberg:

  I renamed a few man pages to match the exact name of the functions they
  describe. I also added template versions for the 13 functions that
  previously lacked man pages. While these don't contain any docs just yet, it
  will now be easier to add the info as the foundation is there!

- (Mar 15 2009) Daniel Stenberg:
